2008-07-15  maximilian

	* po/ChangeLog, po/pt_PT.po:
	  Xfburn European Portuguese translation update (pt_PT)

2008-07-15  alnokta

	* po/ar.po:
	  Update Arabic translations

2008-07-15  majkl

	* po/cs.po:
	  Updated Czech translations

2008-07-15  maximilian

	* po/ChangeLog:
	  Translations updated for the xfburn package (fr;nb_NO)
	* po/fr.po, po/nb_NO.po:
	  Translations updated for the xfburn package (fr;nb_NO)

2008-07-14  jari

	* po/ChangeLog, po/fi.po:
	  Updated Finnish translation.

2008-07-14  stavrosg

	* po/ChangeLog, po/el.po:
	  xfburn translation update.

2008-07-14  David Mohr <david@mcbf.net>

	* po/ChangeLog, po/uk.po:
	  Ukrainian translation update by Dmitry Nikitin

2008-07-14  omaciel

	* po/ChangeLog, po/pt_BR.po:
	  Updated Brazilian Portuguese translation

2008-07-14  David Mohr <david@mcbf.net>

	* po/ChangeLog, po/ar.po, po/ca.po, po/cs.po, po/de.po, po/dz.po,
	  po/el.po, po/en_GB.po, po/es.po, po/eu.po, po/fi.po, po/fr.po,
	  po/gl.po, po/he.po, po/hu.po, po/it.po, po/ja.po, po/ko.po,
	  po/lt.po, po/lv.po, po/nb_NO.po, po/nl.po, po/pa.po, po/pl.po,
	  po/pt_BR.po, po/pt_PT.po, po/ru.po, po/sq.po, po/sv.po, po/uk.po,
	  po/ur.po, po/xfburn.pot, po/zh_CN.po, po/zh_TW.po,
	  xfburn/xfburn-blank-dialog.c:
	  Updating some strings according to suggestion from Og Maciel
	* NEWS:
	  Updating NEWS
	* po/ChangeLog, po/ar.po, po/ca.po, po/cs.po, po/de.po, po/dz.po,
	  po/el.po, po/en_GB.po, po/es.po, po/eu.po, po/fi.po, po/fr.po,
	  po/gl.po, po/he.po, po/hu.po, po/it.po, po/ja.po, po/ko.po,
	  po/lt.po, po/lv.po, po/nb_NO.po, po/nl.po, po/pa.po, po/pl.po,
	  po/pt_BR.po, po/pt_PT.po, po/ru.po, po/sq.po, po/sv.po, po/uk.po,
	  po/ur.po, po/xfburn.pot, po/zh_CN.po, po/zh_TW.po,
	  xfburn/xfburn-main-window.c:
	  Updating all po/pot files, de translation update

2008-07-14  maximilian

	* po/ChangeLog, po/fr.po:
	  Translation updated for the xfburn package (fr)

2008-07-14  Mario Đanić <mario@libburnia-project.org>
