@@ -1,3 +1,7 @@
+2008-09-04  jannis
+
+	* autogen.sh: Add git svn revision versioning support.
+
 2008-07-15  maximilian
 
 	* po/ChangeLog, po/pt_PT.po:
